Wed Dec 23 15:47:02 UTC 2009  Jeff Parsons  <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/y.tab.cpp:

          Reverted a change to the 'state_member' production rule that
          was causing the public/private qualifier to be lost in
          valuetypes and eventtypes.

        * TAO_IDL/include/ast_field.h:

          Removed extra spaces.

Wed Dec 23 11:56:42 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/CodeSets/simple/client.cpp:
        * tests/CodeSets/simple/server.cpp:
        * tests/CodeSets/simple/run_test.pl:
        * tests/Bug_3766_Regression/client.cpp:
        * tests/Bug_3766_Regression/server.cpp:
        * tests/Bug_3766_Regression/run_test.pl:
          Changed the tests so they accept IORs from command line.

        * tests/Bug_3790_Regression/server2.cpp:
          Fixed compile error on wchar builds.

        * bin/tao_orb_tests.lst:
          Disabled a test for bug#3542 on static builds.

Wed Dec 23 09:31:42 UTC 2009  Johnny Willemsen  <jwillemsen {at} remedy.nl>

        * TAO_IDL/be/be_visitor_operation/upcall_command_ss.cpp:
          Small code layout improvement

Wed Dec 23 09:13:42 UTC 2009  Johnny Willemsen  <jwillemsen {at} remedy.nl>

        * tests/Bug_3801_Regression:
          New test to reproduce problem with AMI and attributes

        * bin/tao_orb_tests.lst:
          Added 3801

        * bin/tao_other_tests.lst:
          Removed WinCE

        * tao/Messaging/ExceptionHolder_i.cpp:
          bool changes

`       * tao/Object.cpp:
          bool changes, check all return values

        * tao/Valuetype/ValueBase.cpp:
          bool changes, fixed a lot of debug messages that had a totally
          wrong layout

Tue Dec 22 17:19:42 UTC 2009  Johnny Willemsen  <jwillemsen {at} remedy.nl>

        * tests/IDL_Test/attribute.idl:
          A readonly attribute should just use raises, on a rw attribute